--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Leaky Pipelines</h1>
   <div class="numpad">
-    <span id="result"></span>
+    	<ul id="results" class="font1"></ul>
   </div>
 
 	<script src="https://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
