--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>Leaky Pipelines</h1>
-  <div class="numpad">
+  <div class="section">
+  		<div id="noresults" class="font1">No Leakly Pipes :-)</div>
     	<ul id="results" class="font1"></ul>
   </div>
 
